[project]
name = "ssh-tunnel-manager"
version = "0.1.0"
description = "SSH tunnel manager with support for multiple connections"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "colorama>=0.4.6",
    "psutil>=5.9.0",
]

[project.scripts]
ssh-tunnel = "src.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
